--- a/app/views/leave-feedback/questions/school-extracurricular-interests-2.html
+++ b/app/views/leave-feedback/questions/school-extracurricular-interests-2.html
@@ -9,7 +9,7 @@
 {% set questionText = "Greenwood High School offers clubs and activities during lunchtime, before or after school" %}
 {% set questionSanitised = "school-extracurricular-interests-2" %}
 {% set backLink = "school-staff-changes-2" %}
-{% set nextPage = "my-child-successful-rounded-2" %}
+{% set nextPage = "my-child-life-skills-2" %}
 
 {% block pageTitle %}
 {{ pageTitle }} — {{ serviceName }}
