--- a/app/views/leave-feedback/questions/school-extracurricular-interests.html
+++ b/app/views/leave-feedback/questions/school-extracurricular-interests.html
@@ -9,7 +9,7 @@
 {% set questionText = "Greenwood High School offers clubs and activities during lunchtime, before or after school" %}
 {% set questionSanitised = "school-extracurricular-interests" %}
 {% set backLink = "school-staff-changes" %}
-{% set nextPage = "my-child-successful-rounded" %}
+{% set nextPage = "my-child-life-skills" %}
 
 {% block pageTitle %}
 {{ pageTitle }} — {{ serviceName }}
