--- a/app/views/leave-feedback/questions/school-good-behaviour-2.html
+++ b/app/views/leave-feedback/questions/school-good-behaviour-2.html
@@ -8,7 +8,7 @@
 {% set questionNumber = "9" %}
 {% set questionText = "Greenwood High School is consistent in its approach to good behaviour" %}
 {% set questionSanitised = "school-good-behaviour-2" %}
-{% set backLink = "my-child-successful-rounded-2" %}
+{% set backLink = "my-child-life-skills-2" %}
 {% set nextPage = "my-child-bullied-2" %}
 
 {% block pageTitle %}
