--- a/app/views/leave-feedback/questions/school-good-behaviour.html
+++ b/app/views/leave-feedback/questions/school-good-behaviour.html
@@ -8,7 +8,7 @@
 {% set questionNumber = "9" %}
 {% set questionText = "Greenwood High School is consistent in its approach to good behaviour" %}
 {% set questionSanitised = "school-good-behaviour" %}
-{% set backLink = "my-child-successful-rounded" %}
+{% set backLink = "my-child-life-skills" %}
 {% set nextPage = "my-child-bullied" %}
 
 {% block pageTitle %}
