--- a/app/views/leave-feedback/check-your-answers.html
+++ b/app/views/leave-feedback/check-your-answers.html
@@ -73,8 +73,25 @@ Check your answers before sending your feedback — {{ serviceName }}
           }
         },
         {
+        key: {
+          text: questions.data[3].text
+        },
+        value: {
+          text: data["school-makes-me-aware"]
+        },
+        actions: {
+          items: [
+            {
+              href: "/leave-feedback/questions/school-makes-me-aware?edit=true",
+              text: "Change",
+              visuallyHiddenText: "name"
+            }
+          ]
+        }
+        },
+        {
           key: {
-            text: questions.data[3].text
+            text: questions.data[4].text
           },
           value: {
             text: data["my-child-has-send"]
@@ -83,23 +100,6 @@ Check your answers before sending your feedback — {{ serviceName }}
             items: [
               {
                 href: "/leave-feedback/questions/my-child-has-send?edit=true",
-                text: "Change",
-                visuallyHiddenText: "name"
-              }
-            ]
-          }
-        },
-        {
-          key: {
-            text: questions.data[4].text
-          },
-          value: {
-            text: data["school-has-high-expectations"]
-          },
-          actions: {
-            items: [
-              {
-                href: "/leave-feedback/questions/school-has-high-expectations?edit=true",
                 text: "Change",
                 visuallyHiddenText: "name"
               }
@@ -145,12 +145,12 @@ Check your answers before sending your feedback — {{ serviceName }}
             text: questions.data[7].text
           },
           value: {
-            text: data["my-child-successful-rounded"]
+            text: data["my-child-life-skills"]
           },
           actions: {
             items: [
               {
-                href: "/leave-feedback/questions/my-child-successful-rounded?edit=true",
+                href: "/leave-feedback/questions/my-child-life-skills?edit=true",
                 text: "Change",
                 visuallyHiddenText: "name"
               }
@@ -230,12 +230,12 @@ Check your answers before sending your feedback — {{ serviceName }}
             text: questions.data[12].text
           },
           value: {
-            text: data["school-makes-me-aware"]
+            text: data["my-child-at-boarding-school"]
           },
           actions: {
             items: [
               {
-                href: "/leave-feedback/questions/school-makes-me-aware?edit=true",
+                href: "/leave-feedback/questions/my-child-at-boarding-school?edit=true",
                 text: "Change",
                 visuallyHiddenText: "name"
               }
