--- a/app/views/leave-feedback/questions/school-i-would-recommend.html
+++ b/app/views/leave-feedback/questions/school-i-would-recommend.html
@@ -48,29 +48,14 @@
         },
         items: [
           {
-            text: "Strongly agree",
-            value: "Strongly agree",
-            checked: checked(questionSanitised, "Strongly agree")
+            text: "Yes",
+            value: "Yes",
+            checked: checked(questionSanitised, "Yes")
           },
           {
-            text: "Agree",
-            value: "Agree",
-            checked: checked(questionSanitised, "Agree")
-          },
-          {
-            text: "Disagree",
-            value: "Disagree",
-            checked: checked(questionSanitised, "Disagree")
-          },
-          {
-            text: "Strongly disagree",
-            value: "Strongly disagree",
-            checked: checked(questionSanitised, "Strongly disagree")
-          },
-          {
-            text: "Don‘t know",
-            value: "Don‘t know",
-            checked: checked(questionSanitised, "Don‘t know")
+            text: "No",
+            value: "No",
+            checked: checked(questionSanitised, "No")
           }
         ]
       }) }}
