(fix) removes school name from most questions
Our feeling is that the school name only needs to be in the first couple of questions to reassure the user that they’re answering the right survey.

Removing the (potentially quite long) school name also makes the questions fee less dense.

--- a/app/views/leave-feedback/questions/my-child-can-reach-potential.html
+++ b/app/views/leave-feedback/questions/my-child-can-reach-potential.html
@@ -4,9 +4,9 @@
 {% from "button/macro.njk" import govukButton %}
 {% from "back-link/macro.njk" import govukBackLink %}
 
-{% set pageTitle = "Greenwood High School does its best to ensure that my child reaches their potential" %}
+{% set pageTitle = "The school does its best to ensure that my child reaches their potential" %}
 {% set questionNumber = "3" %}
-{% set questionText = "Greenwood High School does its best to ensure that my child reaches their potential" %}
+{% set questionText = "The school does its best to ensure that my child reaches their potential" %}
 {% set questionSanitised = "my-child-can-reach-potential" %}
 {% set backLink = "my-child-feels-safe" %}
 {% set nextPage = "school-makes-me-aware" %}
