--- a/app/views/leave-feedback/questions/my-child-has-send.html
+++ b/app/views/leave-feedback/questions/my-child-has-send.html
@@ -4,9 +4,9 @@
 {% from "button/macro.njk" import govukButton %}
 {% from "back-link/macro.njk" import govukBackLink %}
 
-{% set pageTitle = "My child has SEND (Special Educational Needs and Disabilities), and I believe they are being helped to succeed at Greenwood High School" %}
+{% set pageTitle = "My child has SEND (Special Educational Needs and Disabilities), and I believe they are being helped to succeed at the school" %}
 {% set questionNumber = "5" %}
-{% set questionText = "My child has SEND (Special Educational Needs and Disabilities), and I believe they are being helped to succeed at Greenwood High School" %}
+{% set questionText = "My child has SEND (Special Educational Needs and Disabilities), and I believe they are being helped to succeed at the school" %}
 {% set questionSanitised = "my-child-has-send" %}
 {% set backLink = "school-makes-me-aware" %}
 {% set nextPage = "school-staff-changes" %}
