--- a/app/views/leave-feedback/questions/my-child-life-skills-2.html
+++ b/app/views/leave-feedback/questions/my-child-life-skills-2.html
@@ -4,9 +4,9 @@
 {% from "button/macro.njk" import govukButton %}
 {% from "back-link/macro.njk" import govukBackLink %}
 
-{% set pageTitle = "Greenwood High School is also helping them learn life skills, such as responsibility" %}
+{% set pageTitle = "The school is also helping them learn life skills, such as responsibility" %}
 {% set questionNumber = "8" %}
-{% set questionText = "Greenwood High School is also helping them learn life skills, such as responsibility" %}
+{% set questionText = "The school is also helping them learn life skills, such as responsibility" %}
 {% set questionSanitised = "my-child-life-skills-2" %}
 {% set backLink = "school-extracurricular-interests-2" %}
 {% set nextPage = "school-good-behaviour-2" %}
