--- a/app/views/leave-feedback/questions/school-extracurricular-interests.html
+++ b/app/views/leave-feedback/questions/school-extracurricular-interests.html
@@ -4,9 +4,9 @@
 {% from "button/macro.njk" import govukButton %}
 {% from "back-link/macro.njk" import govukBackLink %}
 
-{% set pageTitle = "Greenwood High School offers clubs and activities during lunchtime, before or after school" %}
+{% set pageTitle = "The school offers clubs and activities during lunchtime, before or after school" %}
 {% set questionNumber = "7" %}
-{% set questionText = "Greenwood High School offers clubs and activities during lunchtime, before or after school" %}
+{% set questionText = "The school offers clubs and activities during lunchtime, before or after school" %}
 {% set questionSanitised = "school-extracurricular-interests" %}
 {% set backLink = "school-staff-changes" %}
 {% set nextPage = "my-child-life-skills" %}
