--- a/app/views/leave-feedback/questions/school-good-behaviour.html
+++ b/app/views/leave-feedback/questions/school-good-behaviour.html
@@ -4,9 +4,9 @@
 {% from "button/macro.njk" import govukButton %}
 {% from "back-link/macro.njk" import govukBackLink %}
 
-{% set pageTitle = "Greenwood High School is consistent in its approach to good behaviour" %}
+{% set pageTitle = "The school is consistent in its approach to good behaviour" %}
 {% set questionNumber = "9" %}
-{% set questionText = "Greenwood High School is consistent in its approach to good behaviour" %}
+{% set questionText = "The school is consistent in its approach to good behaviour" %}
 {% set questionSanitised = "school-good-behaviour" %}
 {% set backLink = "my-child-life-skills" %}
 {% set nextPage = "my-child-bullied" %}
