--- a/app/views/leave-feedback/questions/school-my-concerns.html
+++ b/app/views/leave-feedback/questions/school-my-concerns.html
@@ -4,9 +4,9 @@
 {% from "button/macro.njk" import govukButton %}
 {% from "back-link/macro.njk" import govukBackLink %}
 
-{% set pageTitle = "Greenwood High School makes it easy for me to talk to them if I have a concern" %}
+{% set pageTitle = "The school makes it easy for me to talk to them if I have a concern" %}
 {% set questionNumber = "11" %}
-{% set questionText = "Greenwood High School makes it easy for me to talk to them if I have a concern" %}
+{% set questionText = "The school makes it easy for me to talk to them if I have a concern" %}
 {% set questionSanitised = "school-my-concerns" %}
 {% set backLink = "my-child-bullied" %}
 {% set nextPage = "school-updates-me" %}
