--- a/app/views/leave-feedback/questions/school-staff-changes.html
+++ b/app/views/leave-feedback/questions/school-staff-changes.html
@@ -4,9 +4,9 @@
 {% from "button/macro.njk" import govukButton %}
 {% from "back-link/macro.njk" import govukBackLink %}
 
-{% set pageTitle = "There have been a high number of teaching staff changes at Greenwood High School over the last year" %}
+{% set pageTitle = "There have been a high number of teaching staff changes at the school over the last year" %}
 {% set questionNumber = "6" %}
-{% set questionText = "There have been a high number of teaching staff changes at Greenwood High School over the last year" %}
+{% set questionText = "There have been a high number of teaching staff changes at the school over the last year" %}
 {% set questionSanitised = "school-staff-changes" %}
 {% set backLink = "my-child-has-send" %}
 {% set nextPage = "school-extracurricular-interests" %}
