--- a/app/views/leave-feedback/questions/school-updates-me-2.html
+++ b/app/views/leave-feedback/questions/school-updates-me-2.html
@@ -4,9 +4,9 @@
 {% from "button/macro.njk" import govukButton %}
 {% from "back-link/macro.njk" import govukBackLink %}
 
-{% set pageTitle = "Greenwood High School updates me regularly about how my child is getting on" %}
+{% set pageTitle = "The school updates me regularly about how my child is getting on" %}
 {% set questionNumber = "12" %}
-{% set questionText = "Greenwood High School updates me regularly about how my child is getting on" %}
+{% set questionText = "The school updates me regularly about how my child is getting on" %}
 {% set questionSanitised = "school-updates-me-2" %}
 {% set backLink = "school-my-concerns-2" %}
 {% set nextPage = "my-child-at-boarding-school-2" %}
