--- a/app/views/leave-feedback/questions/my-child-can-reach-potential-2.html
+++ b/app/views/leave-feedback/questions/my-child-can-reach-potential-2.html
@@ -4,9 +4,9 @@
 {% from "button/macro.njk" import govukButton %}
 {% from "back-link/macro.njk" import govukBackLink %}
 
-{% set pageTitle = "Greenwood High School does its best to ensure that my child reaches their potential" %}
+{% set pageTitle = "The school does its best to ensure that my child reaches their potential" %}
 {% set questionNumber = "3" %}
-{% set questionText = "Greenwood High School does its best to ensure that my child reaches their potential" %}
+{% set questionText = "The school does its best to ensure that my child reaches their potential" %}
 {% set questionSanitised = "my-child-can-reach-potential-2" %}
 {% set backLink = "my-child-feels-safe-2" %}
 {% set nextPage = "school-makes-me-aware-2" %}
