--- a/app/views/leave-feedback/questions/school-makes-me-aware-2.html
+++ b/app/views/leave-feedback/questions/school-makes-me-aware-2.html
@@ -4,9 +4,9 @@
 {% from "button/macro.njk" import govukButton %}
 {% from "back-link/macro.njk" import govukBackLink %}
 
-{% set pageTitle = "Greenwood High School tells me what my child will be learning in the forthcoming term or year" %}
+{% set pageTitle = "The school tells me what my child will be learning in the forthcoming term or year" %}
 {% set questionNumber = "4" %}
-{% set questionText = "Greenwood High School tells me what my child will be learning in the forthcoming term or year" %}
+{% set questionText = "The school tells me what my child will be learning in the forthcoming term or year" %}
 {% set questionSanitised = "school-makes-me-aware-2" %}
 {% set backLink = "my-child-can-reach-potential-2" %}
 {% set nextPage = "my-child-has-send-2" %}
