--- a/app/views/leave-feedback/questions/my-child-feels-safe-2.html
+++ b/app/views/leave-feedback/questions/my-child-feels-safe-2.html
@@ -32,7 +32,7 @@
       }) }}
     {% endif %}
 
-    <span class="govuk-caption-xl">Question {{ questionNumber }} of 14</span>
+    <span class="govuk-caption-xl"><strong>Child 2:</strong> Question {{ questionNumber }} of 14</span>
 
     <form action="{{ '/leave-feedback/check-your-answers-2' if editing else nextPage }}" method="post" class="form">
 
