--- a/app/views/leave-feedback/questions/school-i-would-recommend.html
+++ b/app/views/leave-feedback/questions/school-i-would-recommend.html
@@ -5,10 +5,10 @@
 {% from "back-link/macro.njk" import govukBackLink %}
 
 {% set pageTitle = "I would recommend Greenwood High School to another parent" %}
-{% set questionNumber = "14" %}
+{% set questionNumber = "13" %}
 {% set questionText = "I would recommend Greenwood High School to another parent" %}
 {% set questionSanitised = "school-i-would-recommend" %}
-{% set backLink = "my-child-at-boarding-school" %}
+{% set backLink = "school-updates-me" %}
 {% set nextPage = "additional-feedback" %}
 
 {% block pageTitle %}
@@ -32,7 +32,7 @@
       }) }}
     {% endif %}
 
-    <span class="govuk-caption-xl"><strong>Child 1:</strong> Question {{ questionNumber }} of 14</span>
+    <span class="govuk-caption-xl"><strong>Child 1:</strong> Question {{ questionNumber }} of 13</span>
 
     <form action="{{ '/leave-feedback/check-your-answers' if editing else nextPage }}" method="post" class="form">
 
