--- a/app/views/leave-feedback/sharing-information-consent.html
+++ b/app/views/leave-feedback/sharing-information-consent.html
@@ -5,6 +5,7 @@
 {% from "input/macro.njk" import govukInput %}
 {% from "button/macro.njk" import govukButton %}
 {% from "back-link/macro.njk" import govukBackLink %}
+{% from "warning-text/macro.njk" import govukWarningText %}
 
 {% block pageTitle %}
 What happens with your feedback — {{ serviceName }}
