Free text for questions 9,10,12
Three of the questions have now additionally a free text field where the user optionally can explain their answer.

Before we found during user research that parent would want to give more context to their answers, so this will test that need.

Explanaition is displayed on check your answers page, and emailed to the user.

Trello
https://trello.com/c/WEJ7xpfh/313-users-can-provide-more-explanation-for-their-response-to-a-question

--- a/app/views/leave-feedback/check-your-answers-2.html
+++ b/app/views/leave-feedback/check-your-answers-2.html
@@ -18,6 +18,16 @@ Check your answers before sending your feedback — {{ serviceName }}
 
     <h2 class="govuk-heading-m">Your answers for child 1</h2>
 
+    {% macro explainedAnswer(explanation, answer) %}
+
+      {% if explanation %}
+        {{ answer }}: {{ explanation }}
+      {% else %}
+        {{ answer }}
+      {% endif %}
+
+    {% endmacro %}
+
     {{ govukSummaryList({
       classes: 'govuk-!-margin-bottom-9',
       rows: [
@@ -162,7 +172,7 @@ Check your answers before sending your feedback — {{ serviceName }}
             text: questions.data[8].text
           },
           value: {
-            text: data["school-good-behaviour"]
+            text: explainedAnswer(data["school-behaviour-explain"], data["school-good-behaviour"])
           },
           actions: {
             items: [
@@ -179,7 +189,7 @@ Check your answers before sending your feedback — {{ serviceName }}
             text: questions.data[9].text
           },
           value: {
-            text: data["my-child-bullied"]
+            text: explainedAnswer(data["bullying-explain"], data["my-child-bullied"])
           },
           actions: {
             items: [
@@ -213,7 +223,7 @@ Check your answers before sending your feedback — {{ serviceName }}
             text: questions.data[11].text
           },
           value: {
-            text: data["school-updates-me"]
+            text: explainedAnswer(data["school-updates-explain"], data["school-updates-me"])
           },
           actions: {
             items: [
@@ -415,7 +425,7 @@ Check your answers before sending your feedback — {{ serviceName }}
             text: questions.data[8].text
           },
           value: {
-            text: data["school-good-behaviour-2"]
+            text: explainedAnswer(data["school-behaviour-explain-2"], data["school-good-behaviour-2"])
           },
           actions: {
             items: [
@@ -432,7 +442,7 @@ Check your answers before sending your feedback — {{ serviceName }}
             text: questions.data[9].text
           },
           value: {
-            text: data["my-child-bullied-2"]
+            text: explainedAnswer(data["bullying-explain-2"], data["my-child-bullied-2"])
           },
           actions: {
             items: [
@@ -466,7 +476,7 @@ Check your answers before sending your feedback — {{ serviceName }}
             text: questions.data[11].text
           },
           value: {
-            text: data["school-updates-me-2"]
+            text: explainedAnswer(data["school-updates-explain-2"], data["school-updates-me-2"])
           },
           actions: {
             items: [
