--- a/app/views/leave-feedback/questions/my-child-bullied-2.html
+++ b/app/views/leave-feedback/questions/my-child-bullied-2.html
@@ -75,6 +75,24 @@
         ]
       }) }}
 
+      {{ govukCharacterCount({
+        name: "bullying-explain-2",
+        id: "bullying-explain-2",
+        classes: "govuk-!-width-two-thirds",
+        maxlength: 250,
+
+        label: {
+          text: "Explain my answer",
+          classes: "govuk-label--m"
+        },
+        hint: {
+          html: "<p class='govuk-hint'>This is optional if you want to add more context to your answer. Do not include any names or personal information.</p>",
+          classes: "govuk-!-width-two-thirds"
+        },
+        rows: 3,
+        value: data["bullying-explain-2"]
+      }) }}
+
       {% if editing %}
         {{ govukButton({
           text: "Save your changes"
@@ -94,4 +112,3 @@
 
 
 {% endblock %}
-
