(feature) adds a flow for users without a code
If a user has no inspection-specific code from the school, they:

- see a text field where they can enter the name of their school
- see a (hard-coded) list of results
- click through to a (hard-coded) page with enough detail to be certain this is their school
- confirm their school choice, and are taken to the email and consent page

--- a/app/views/leave-feedback/survey-code.html
+++ b/app/views/leave-feedback/survey-code.html
@@ -63,7 +63,7 @@ Enter your survey code — {{ serviceName }}
           value: "no",
           text: "No",
           conditional: {
-            html: "<p class='govuk-hint'>If you don’t have a code we will take you to a different service so you can find your school.</p>"
+            html: "<p class='govuk-hint'>If you don’t have a code we’ll help you find your school.</p>"
           },
           checked: checked("get-survey-code", "no")
         }
