--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -28,3 +28,45 @@ $govuk-global-styles: true;
     width: 80%;
   }
 }
+
+ul.schools-list {
+  list-style: none;
+  padding: 0;
+  font-family: "nta", Arial, sans-serif;
+  li {
+    @include govuk-clearfix;
+    clear: both;
+    margin-bottom: 20px;
+    border-bottom: 1px solid #bfc1c3;
+    position: relative;
+  }
+  dl {
+    @include govuk-clearfix;
+    // padding-bottom: 1em;
+    dt {
+      float: left;
+      clear: left;
+      padding-right: 0.5em;
+    }
+    dd {
+      margin: 0;
+      float: left;
+    }
+  }
+}
+
+#google-map {
+  position: relative;
+  padding-bottom: 100%;
+  height: 0;
+  overflow: hidden;
+}
+
+#google-map iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100% !important;
+  height: 75% !important;
+  // padding: 0.75rem;
+}
