(fix) updates email confirmed page text

--- a/app/views/leave-feedback/email-confirmed.html
+++ b/app/views/leave-feedback/email-confirmed.html
@@ -15,9 +15,9 @@ Email confirmed — {{ serviceName }}
         titleText: "Email confirmed"
       }) }}
 
-    <h2 class="govuk-heading-m">We've confirmed your email address.</h2>
+    <h2 class="govuk-heading-m">Thank you for providing feedback</h2>
 
-    <p class="govuk-body">Your feedback will be used to improve the quality of your school. Thank you!</p>
+    <p class="govuk-body">By giving feedback you are helping schools raise their standards. It also helps parents and carers make more informed choices about where to send their children.</p>
 
   </div>
 </div>
