--- a/app/views/leave-feedback/questions/school-updates-me-2.html
+++ b/app/views/leave-feedback/questions/school-updates-me-2.html
@@ -82,11 +82,11 @@
         maxlength: 250,
 
         label: {
-          text: "Explain my answer",
+          text: "Explain your answer (optional)",
           classes: "govuk-label--m"
         },
         hint: {
-          html: "<p class='govuk-hint'>This is optional if you want to add more context to your answer. Do not include any names or personal information.</p>",
+          html: "<p class='govuk-hint'>You can add more information about your answer here, if you like. Remember not to include names or other personal information.</p>",
           classes: "govuk-!-width-two-thirds"
         },
         rows: 3,
