(wip) updates consent text

--- a/app/views/leave-feedback/check-your-answers.html
+++ b/app/views/leave-feedback/check-your-answers.html
@@ -296,9 +296,9 @@ Check your answers before sending your feedback — {{ serviceName }}
 
     <h2 class="govuk-heading-m">Send your feedback</h2>
 
-    <p class="govuk-body">Your feedback and comments will be made anonymous and sent to Ofsted and {{ schoolName }}.</p>
+    <p class="govuk-body">All feedback submitted during an inspection will be read by an Ofsted inspector to help them understand what {{ schoolName }} is like. Ofsted will not publish any information in the report that identifies a child. More information is available in Ofsted’s privacy policy.</p>
 
-    <p class="govuk-body">By giving feedback you give your consent to Ofsted seeing your responses.</p>
+    <p class="govuk-body">By using this service you give your consent to Ofsted and the school having access to your email address and responses.</p>
 
     <form action="/leave-feedback/confirmation" method="post" novalidate>
 
